[gd_scene load_steps=3 format=3 uid="uid://cv5k5c6yxmrrf"]

[ext_resource type="Script" path="res://scripts/ui/Inventory.gd" id="1_sru5s"]
[ext_resource type="Texture2D" uid="uid://cms1nvkyr43o" path="res://assets/small_rocks.png" id="2_ksi3u"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sru5s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 130.0
offset_bottom = 169.0
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Slots" type="GridContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
columns = 6

[node name="SlotInfo" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/SlotInfo"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/SlotInfo/MarginContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="HBoxContainer/SlotInfo/MarginContainer2/PanelContainer"]
layout_mode = 2

[node name="ItemTexture" type="TextureRect" parent="HBoxContainer/SlotInfo/MarginContainer2/PanelContainer/Container"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_ksi3u")
expand_mode = 4

[node name="ItemName" type="Label" parent="HBoxContainer/SlotInfo/MarginContainer2/PanelContainer/Container"]
layout_mode = 2
text = "Rocks"
horizontal_alignment = 1

[node name="ActionButton" type="Button" parent="HBoxContainer/SlotInfo/MarginContainer2/PanelContainer/Container"]
visible = false
layout_mode = 2
text = "DO STUFF"
